# matrix

./: .gitignore  Cargo.toml  Makefile  README.md
docker/: Dockerfile  Dockerfile.openeuler  Dockerfile.ubuntu  cargo_init.sh
matrix_cli/: Cargo.toml  README.md  pyproject.toml  pytest.ini
matrix_cli/sample_conf/: qwen3_sglang.yaml  qwen3_vllm.yaml
matrix_cli/src/: lib.rs
matrix_cli/src/matrix_cli/: cli.py  log.py  utils.py
matrix_cli/src/matrix_cli/router/: __init__.py  launch_router.py  router.py  router_args.py
matrix_cli/src/matrix_cli/sglang/: __init__.py  sglang_launcher.py
matrix_cli/src/matrix_cli/vllm/: __init__.py  vllm_launcher.py
matrix_cli/tests/: conftest.py  test_cli.py  test_log.py  test_utils.py
matrix_cli/tests/router/: test_launch_router.py  test_launch_router_validation.py  test_router_args.py
matrix_router/: Cargo.toml  README.md  build.rs
matrix_router/src/: lib.rs  main.rs  version.rs
matrix_router/src/app/: middleware.rs  mod.rs  server.rs
matrix_router/src/conf/: config.rs  mod.rs  utils.rs
matrix_router/src/protocol/: mod.rs  openai.rs
matrix_router/src/routers/: factory_ext.rs  mod.rs
matrix_router/src/routers/http/: dp_utils.rs  mod.rs  pd_router_ext.rs  router_ext.rs  vllm_pd_router.rs
matrix_router/src/utils/: mod.rs  model_utils.rs
matrix_router/src/workers/: mod.rs  worker_add.rs  worker_registry_ext.rs
