[package]
name = "matrix_router"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "matrix_router_rs"
crate-type = ["rlib"]

[[bin]]
name = "matrix-router"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bytes = "1.8.0"
http-body = "1.0.1"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["stream", "blocking", "json", "rustls-tls"] }
futures-util = "0.3.32"
futures = { workspace = true }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = "0.2"
tracing-appender = "0.2.3"
chrono = "0.4"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
zmq = "0.10.0"
rmp-serde = "1.3"
clap = { workspace = true }
http = "1.4.0"
once_cell = "1.21.4"
anyhow = "1.0"
dashmap = "6.1.0"
sha2 = "0.10"
subtle = "2.6"

# smg dependencies
smg = { workspace = true }
smg-auth = { workspace = true }
tool-parser = { workspace = true }
smg-mesh = { workspace = true }
llm-tokenizer = "=1.3.2"
openai-protocol = "=1.7.0"
wfaas = "=1.0.3"


[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
toml = "0.9"

[lints]
workspace = true